# hackathon-anthropic

./: .env.example  .gitignore  README.md  STEPS.md  docker-compose.yml  kapso-research.md  next_STEPS.md  pyproject.toml
.claude/: settings.local.json
backend/: requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 400b93115cfb_initial_schema.py  80d8a2607024_b_002_add_image_url_to_agent_sessions.py  a8479577e492_merge_a002_and_b001.py  a_002_add_ml_auth_fields.py  a_003_add_agent_session_data.py  c7cbf1a3b951_b_001_add_agent_sessions.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: router.py
backend/app/onboarding/: models.py  router.py  schemas.py  service.py
backend/app/publication/: agent_service.py  ml_tools.py  models.py  router.py  schemas.py  service.py
backend/app/shared/: auth.py  claude_client.py  deps.py  kapso.py  ml_client.py
backend/app/shared/models/: user.py
backend/app/shared/schemas/: user.py
backend/app/webhook/: dispatcher.py  router.py
database/: init.sql
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/onboarding/components/: OnboardingStats.tsx  UserCard.tsx
frontend/src/onboarding/pages/: AdminDashboard.tsx  UserList.tsx
frontend/src/publication/components/: CategoryFilter.tsx  MediaGallery.tsx  PublicationCard.tsx
frontend/src/publication/pages/: Feed.tsx  ModerationPanel.tsx  PublicationDetail.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/components/: Layout.tsx  Navbar.tsx  (+1 more)
kapso/: __init__.py  client.py  main.py  webhook_server.py
(+2 files in other folders)
